--- a/2.html
+++ b/2.html
@@ -4,16 +4,9 @@
   <title>WEB 1 - css</title>
   <meta charset="utf-8">
   <style>
-  #active{
-    color:red;}
-  a{
-    color:black;
+  a {
+    color:darkgreen;
     text-decoration: none;
-    }
-    .saw{
-      color:gray;
-    }
-
     }
     h1{
       font-size:45px;
@@ -25,8 +18,8 @@
 <body>
   <h1><a href="index.html">WEB</font></a></h1>
 <ol>
-  <li> <a href="1.html" class="saw">HTML</a></li>
-  <li> <a href="2.html" class="saw" id="active">CSS</a></li>
+  <li> <a href="1.html">HTML</a></li>
+  <li> <a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
   <li> <a href="3.html">JavaScript</a></li>
 </ol>
 
